[package]
name = "maven-repo"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/C0D3-M4513R/maven-repo"

[dependencies]
dotenvy = "0.15.7"
anyhow = "1.0.98"

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

rocket = "0.5.1"
tokio = "1.45.1"
reqwest = { version = "0.12.20", default-features = false, features = ["native-tls", "stream"]}
futures = "0.3.31"
tokio-util = { version = "0.7.15", features = ["compat"]}

serde = "1.0.219"
serde_json = "1.0.140"
serde_derive = "1.0.219"
#quick-xml = { version = "0.37.5" , features = ["serde"]}
base64 = "0.22.1"

scc = "2.3.4"

bcrypt = "0.17.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tokio_unstable)'] }


[profile.release]
lto = true
strip = true