[package]
name = "maven-repo"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/C0D3-M4513R/maven-repo"
#rust-version = "1.89.0"

[dependencies]
dotenvy = "0.15.7"
anyhow = "1.0.98"

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

rocket = "0.5.1"
tokio = { version = "1.45.1", features = ["io-util"] }
reqwest = { version = "0.12.20", default-features = false, features = ["native-tls", "stream"]}
futures = "0.3.31"
tokio-util = { version = "0.7.15", features = ["compat"]}

serde = "1.0.219"
serde_json = "1.0.140"
serde_derive = "1.0.219"
quick-xml = { version = "0.38.0" , features = ["serialize"]}
base64 = "0.22.1"
chrono = "0.4.41"
memmap2 = "0.9.5"

scc = "2.3.4"

bcrypt = "0.17.0"
data-encoding = "2.9.0"
digest = "0.10.7"
md-5 = "0.10.6"
sha1-checked = "0.10.0"
sha2 = "0.10.9"
sha3 = "0.10.8"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tokio_unstable)'] }


[profile.release]
lto = true
strip = true