[package]
name = "maven-repo"
version = "0.1.1"
edition = "2024"
repository = "https://github.com/C0D3-M4513R/maven-repo"
#rust-version = "1.89.0"

[dependencies]
dotenvy = "0.15.7"
anyhow = "1.0.102"
const_format = "0.2.35"
smallvec = { version = "1.15.1", features = ["serde"] }

tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

actix-web = { version = "4.13.0"}
tokio = { version = "1.49.0", features = ["io-util", "rt-multi-thread"] }
reqwest = { version = "0.13.0", default-features = false, features = ["native-tls", "stream"]}
futures = "0.3.31"
tokio-util = { version = "0.7.18", features = ["compat"]}

serde = { version = "1.0.228", features = ["rc"] }
serde_json = "1.0.149"
serde_derive = "1.0.228"
quick-xml = { version = "0.39.2" , features = ["serialize"]}
base64 = "0.22.1"
chrono = { version = "0.4.41", features = ["serde"] }
memmap2 = "0.9.10"

bcrypt = "0.18.0"
data-encoding = "2.10.0"
digest = "0.10.0"
md-5 = "0.10.6"
sha1-checked = "0.10.0"
sha2 = "0.10.9"
blake3 = "1.8.3"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tokio_unstable)'] }

[profile.release]
lto = "fat"
strip = true

[features]
default = ["locking"]
socket = []
locking = []